<resources>
    <!-- Generated by Automatic String Resource Translation
--><!--          https://asrt.gluege.boerde.de
--><string name="app_name">emp3</string>
    <string name="search_text">Search song title or artist</string>
    <string name="search">Search</string>
    <string name="new_music">New music</string>
    <string name="emp3">emp3</string>
    <string name="write_file">This application needs to access your file storage to be able to save the songs.</string>
    <string name="share">Share</string>
    <string name="rate_us_please">Please rate us</string>
    <string name="update_app">Update app</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="about">About the app</string>
    <string name="download_complete">Download complete</string>
    <string name="check_internet">Please, check your internet connection</string>
    <string name="error_occured">An error has occurred.Please contact the admin</string>
    <string name="connection_timeout">Slow internet connection. Try Again.</string>
    <string name="check_storage">Can not save song, please check your storage</string>
    <string name="downloading">downloading</string>
    <string name="downloading_check">Downloading… Check notifications for progress</string>
    <!-- Generated by Automatic String Resource Translation
    --><!--          https://asrt.gluege.boerde.de
--></resources>