<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:layout_margin="20dp"
        >

    <!--  <TextView
              android:id="@+id/text"
              android:textSize="20sp"
              android:textColor="@color/colorPrimary"
              android:layout_marginTop="20dp"
              android:textAlignment="center"
              app:layout_constraintTop_toTopOf="parent"
              android:text="@string/download_music_in_mp3"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>-->


    <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

        <AutoCompleteTextView
                android:id="@+id/txtSearch"
                android:hint="@string/search_text"
                android:layout_width="match_parent"
                android:completionThreshold="1"
                android:layout_height="wrap_content"/>

        <ImageView

                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/search"
                android:id="@+id/btnSearch"
                android:src="@drawable/ic_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/native_banner_ad_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/relative"
            />

    <TextView
            android:id="@+id/label"
            app:layout_constraintTop_toBottomOf="@id/native_banner_ad_container"
            android:textColor="@color/colorPrimary"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginTop="40dp"
            android:background="@color/gray"
            android:text="@string/new_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:indicatorColor="@color/colorPrimary"
            app:indicatorName="LineSpinFadeLoaderIndicator"/>

    <ListView

            android:id="@+id/listSongs"
            app:layout_constraintTop_toBottomOf="@id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


    </ListView>

    <android.support.v7.widget.Toolbar
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#333333"
            android:id="@+id/toolbar"
            android:visibility="gone"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="100dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="Drake-In My Felings"
                    android:id="@+id/selected_track_title"
                    android:paddingLeft="8dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:paddingStart="8dp"/>

            <RelativeLayout
                    android:id="@+id/rv"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <com.victor.loading.rotate.RotateLoading
                        android:id="@+id/rotateloading"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:loading_width="1dp"
                        app:loading_color="#ffffff"
                        android:layout_centerInParent="true"/>

                <ImageView
                        android:src="@drawable/ic_play"
                        android:id="@+id/player_control"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <ImageView
                        android:src="@drawable/download"
                        android:id="@+id/imgDownload"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_alignParentEnd="true"/>
            </RelativeLayout>


            <LinearLayout
                    android:layout_below="@id/rv"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:weightSum="1"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/time"
                        android:text="00:00"
                        android:layout_weight=".2"
                        android:textColor="@color/white"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                <SeekBar
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/seekBar"
                        android:layout_weight=".6"
                        />

                <TextView
                        android:text="00:00"
                        android:textColor="@color/white"
                        android:id="@+id/duration"
                        android:layout_weight=".2"
                        android:layout_width="0dp"
                        android:visibility="invisible"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>


</android.support.constraint.ConstraintLayout>